--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
             <img src="https://freepngdesign.com/content/uploads/images/volkswagen-black-line-logo-9649.png" width="200px" height="150px" />
             <h1>Wolkswagen Tiguan</h1>
             <a href="#begin" style="color:blue; font-size:20px; text-align">Початок<br></a>
-            <a href="#end" style="color:blue; font-size:20px; text-align">Для замовлення автівки</a>
+            <a href="#end" style="color:blue; font-size:20px; text-align">Для замовлення автівки<br></a>
             <img src="https://i.infocar.ua/i/12/5339/1400x936.jpg" width="700px" height="500px" />
         </header>
         <main style="background-color:Gainsboro">
